<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvHello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_hello_text"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginHorizontal="70dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHello">

        <Button
            android:id="@+id/calcButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_calc_text"/>

        <Button
            android:id="@+id/_2048Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_2048_text"/>

        <Button
            android:id="@+id/ratesButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rates_text"/>

        <Button
            android:id="@+id/chatButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chat_text"/>

        <Button
            android:id="@+id/exitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_exit_text"/>


    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>